# adaptive-quantization-aware-serving-with-dynamic-precision

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: config.yaml  results.json  test_metrics.json  training_history.json
scripts/: evaluate.py  predict.py  train.py
src/adaptive_quantization_aware_serving_with_dynamic_precision/: __init__.py
src/adaptive_quantization_aware_serving_with_dynamic_precision/evaluation/: __init__.py  analysis.py  metrics.py
src/adaptive_quantization_aware_serving_with_dynamic_precision/models/: __init__.py  components.py  model.py
src/adaptive_quantization_aware_serving_with_dynamic_precision/training/: __init__.py  trainer.py
src/adaptive_quantization_aware_serving_with_dynamic_precision/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
